Ejercicio_8.01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - containerPort: 80
      - name: busybox
        image: busybox:latest
        command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
